--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -904,7 +904,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="数据备份还原"
+                    android:text="数据备份还原""
                     android:textColor="@android:color/white"
                     android:textSize="@dimen/ts_24" />
 
